# TurtleBotSLAM

./: .gitignore  CITATION.cff  README.md  package.xml  setup.cfg  setup.py
rosbags/circle/: circle_0.db3  metadata.yaml
rosbags/line/: line_0.db3  metadata.yaml
rosbags/spin/: metadata.yaml  spin_0.db3
rosbags/two_topics/: metadata.yaml  two_topics_0.db3
scan_data_bag/: metadata.yaml  scan_data.db3
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: SLAMdata.msg
src/turtleSLAM/: build.sh  package.xml  setup.cfg  setup.py
src/turtleSLAM/install/: local_setup.sh  setup.sh
src/turtleSLAM/install/turtleSLAM/lib/turtleSLAM/: parse_odom
src/turtleSLAM/install/turtleSLAM/share/turtleSLAM/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/turtleSLAM/log/: latest_build
src/turtleSLAM/turtleSLAM/: ekf_slam.py  parse_lidar.py  parse_odom.py
src/turtleSLAM/turtleSLAM/interfaces/msg/: SLAM_data.msg
turtle_reset_odm/: turtle_slam.py
